# blog-spot-app

backend/: db.sqlite3  pyproject.toml
backend/api/: routers.py  urls.py  views.py  viewsets.py
backend/backend/: settings.py  urls.py
backend/main/: models.py  serializers.py
backend/main/abstract/: models.py
backend/main/auth/serializers/: login.py  register.py
backend/main/auth/viewsets/: login.py  refresh.py  register.py
backend/main/migrations/: 0001_initial.py  0002_alter_user_is_superuser.py  0003_alter_user_is_superuser.py  0004_user_is_staff.py  0005_remove_user_is_staff.py  0006_blog_edited_blog_public_id_blog_updated_and_more.py  0007_alter_blog_updated.py  0008_blog_photo.py  0009_user_avatar.py
frontend/: bun.lockb  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: Blog.tsx  BlogCard.tsx  NavBar.jsx
frontend/src/pages/: Blog.tsx  EditBlog.tsx  Home.tsx  Layout.tsx  Login.tsx  MainPage.tsx  NavBar.jsx  NewBlog.tsx  SignUp.tsx  signup.module.css
frontend/src/styles/: blogcard.module.css  login.module.css  navbar.module.css  newblog.module.css
